# hm-video-player

./: .gitattributes  .gitignore  README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5  package-lock.json
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: build-experience.md
entry/: oh-package-lock.json5  oh-package.json5  patch.json
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/cpp/decoder/: AudioDecoder.cpp  AudioDecoder.h  FFmpegDecoder.cpp  FFmpegDecoder.h  VideoRenderer.cpp  VideoRenderer.h
entry/src/main/cpp/napi/: decoder_napi.cpp  decoder_napi.h  native_module.cpp
entry/src/main/cpp/utils/: LogUtils.h  MediaUtils.cpp  MediaUtils.h
entry/src/main/ets/common/: Enums.ets  PlayerError.ets
entry/src/main/ets/components/: ControlPanel.ets  DanmakuLayer.ets  ErrorDialog.ets  OnlineMediaCard.ets  VideoCard.ets  VideoPlayerView.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/model/: DanmakuItem.ets  OnlineMedia.ets  VideoItem.ets
entry/src/main/ets/native/: FFmpegNative.ets
entry/src/main/ets/pages/: Index.ets  OnlinePage.ets  PlayerPage.ets  SearchPage.ets  SettingsPage.ets
entry/src/main/ets/service/: DownloadManager.ets  MediaScanner.ets  PiPManager.ets  PlayHistoryService.ets  SettingsService.ets  SourceManager.ets  VideoPlayerManager.ets
entry/src/main/ets/utils/: DanmakuEngine.ets  FileUtils.ets  LocalizationManager.ets  SourceParser.ets  TimeUtils.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/zh_CN/element/: string.json
scripts/: build_ffmpeg.sh
